# pym3t

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  run_image_dir_example.py  run_image_per_image.py  run_image_per_image_color.py  run_image_per_image_color_depth.py  run_image_per_image_rgb_depth.py  run_on_camera_sequence_realsense.py  run_realsense_example.py  run_webcam.py  run_webcam_example.py  single_view_tracker_example.py  test.py
.github/workflows/: test.yml
config/: banana.yaml  cam_d435_640.yaml  static_detector.yaml
examples/: run_image_dir_example.py  run_image_dir_minimal.py  run_realsense_example.py  run_webcam_example.py  single_view_tracker_example.py
include/pyicg/: dummy_camera.h  type_caster_utils.h
include/pym3t/: dummy_camera.h  type_caster_utils.h
src/: dummy_camera.cpp  pyicg.cpp  pym3t.cpp
src/pyicg/: __init__.py
src/pym3t/: __init__.py
tests/: test_pym3t.py  tototo.py
