[build-system]
# build time dependencies, installed in an isolated environment
requires = ["scikit-build-core"]
# use scikit-build instead of setuptools
build-backend = "scikit_build_core.build"

[project]
name = "pym3t"
version = "0.0.1"
requires-python = ">=3.7"
# run time dependencies
dependencies = [
    "numpy"
]
