[build-system]
# build time dependencies, installed in an isolated environment
requires = ["scikit-build-core"]
# use scikit-build instead of setuptools
build-backend = "scikit_build_core.build"

[project]
name = "pym3t"
version = "0.0.1"
requires-python = ">=3.8"
# run time dependencies
dependencies = []

[project.optional-dependencies]
examples = [
    "numpy<2.0.0", # older numpy-quaternion releases are not compatible with numpy 2.0.0
    "numpy-quaternion>=2023.0.3",
    "opencv-python>=4.11.0.86",
    "pyyaml"
]
